Revert "added one line of output"
This reverts commit 51b13f7e1bab021dadb472a8742228d00ad568d5.

--- a/config
+++ b/config
@@ -1,1 +1,1 @@
-[["result pages: ", 6],["exclude bundles: ",0], ["exlude unreviewed books: ", 0], ["exlude bad books: ", 0]]
+[["result pages: ", 1]]
